[gd_scene load_steps=2 format=3 uid="uid://cdxdvvuqssb07"]

[ext_resource type="Script" path="res://World.gd" id="1_gyw2c"]

[node name="World" type="Node3D"]
script = ExtResource( "1_gyw2c" )

[node name="LabelRPC" type="Label" parent="."]
offset_left = 30.0
offset_top = 33.0
offset_right = 70.0
offset_bottom = 56.0
text = "rpc
"

[node name="LabelUDP" type="Label" parent="."]
offset_left = 28.0
offset_top = 217.0
offset_right = 68.0
offset_bottom = 243.0
text = "udp
"

[node name="HSlider" type="HSlider" parent="."]
minimum_size = Vector2(480, 0)
offset_left = 96.0
offset_top = 507.0
offset_right = 104.0
offset_bottom = 523.0
min_value = 10.0
max_value = 500.0
value = 60.0

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = 502.0
offset_right = 91.0
offset_bottom = 528.0
text = "target fps"

[node name="LabelTargetFPS" type="Label" parent="."]
offset_left = 583.0
offset_top = 502.0
offset_right = 658.0
offset_bottom = 528.0
text = "30
"

[node name="LabelPeer" type="Label" parent="."]
offset_left = 650.0
offset_top = 42.0
offset_right = 690.0
offset_bottom = 65.0
text = "server
"
